--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.myHeader{
+  background-color: #074770;
+  padding:  50px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+
+.coordinates, .myMap{
+  display: inline-table;
+}
+.coordinates{
+  background-color: whitesmoke;
+  padding: 30px;
+  width: 50%;
+}
+.myMap{
+  background-color: violet;
+  padding: 30px;
+  width: 50% !important;
+}
+
+.submitBtn{
+  color: #074770;
+  background-color: rgb(209, 208, 208);
+  border-radius: 20px;
+  padding: 10px 30px 10px 30px;
+  align-self: flex-end;
+}
+
+.showRouteBtn{
   color: white;
+  background-color:#074770 ;
+  border-radius: 20px;
+  padding: 10px 30px 10px 30px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.locationInput, .latInput, .longInput{
+  color:white;
 }
