--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,62 @@
+body {
+  background-color: #72A1BF !important;
+}
+
+/* .container{
+  top: 205px;
+  left: 392px;
+  width: 1137px;
+  height: 670px;
+  background: #074770 0% 0% no-repeat padding-box;
+  border-radius: 36px;
+  opacity: 1;
+} */
+
 .myHeader{
-  background-color: #074770;
+  padding: 20px;
+  margin-top: 150px;
+  width: 1157px;
+  height: 151px;
+  background: #074770 0% 0% no-repeat padding-box;
+  opacity: 1;
+  /* background-color: #074770;
   padding:  50px;
-  display: flex;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
+  display: flex; */
+  border-top-left-radius: 36px;
+  border-top-right-radius: 36px; 
 }
 
 .coordinates, .myMap{
   display: inline-table;
 }
+
 .coordinates{
-  background-color: whitesmoke;
-  padding: 30px;
+  padding: 20px;
+  top: 356px;
+  left: 392px;
   width: 50%;
+  height: 519px;
+  background: #F2FAFF 0% 0% no-repeat padding-box;
+  border-radius: 0px 0px 0px 36px;
+  opacity: 1;
+  /* background-color: whitesmoke;
+  padding: 30px;
+  width: 50%; */
 }
 .myMap{
-  background-color: violet;
-  padding: 30px;
-  width: 50% !important;
+  top: -537px;
+  left: 50%;
+  width: 600px;
+  height: 519px;
+  border-radius: 0px 0px 36px 0px;
+  opacity: 1;
+  /* background: transparent url('img/Screenshot (1521).png') 0% 0% no-repeat padding-box; */
+  /* width: 50% !important;
+  height: 400px; */
+}
+
+.locationHeader, .locationHeader, .longitudeHeader{
+    margin-left: 20px !important;
 }
 
 .submitBtn{
@@ -35,6 +74,11 @@
   padding: 10px 30px 10px 30px;
 }
 
-.locationInput, .latInput, .longInput{
+.locationLabel, .latLabel, .longLabel{
   color:white;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
 }
