--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,9 @@ body {
   height: 151px;
   background: #074770 0% 0% no-repeat padding-box;
   opacity: 1;
-  /* background-color: #074770;
-  padding:  50px;
-  display: flex; */
+  /* /* background-color: #074770;
+  padding:  50px; */
+  display: flex; 
   border-top-left-radius: 36px;
   border-top-right-radius: 36px; 
 }
@@ -44,15 +44,19 @@ body {
   width: 50%; */
 }
 .myMap{
+  width: 665px;
+  height: 519px;
   top: -537px;
   left: 50%;
-  width: 600px;
-  height: 519px;
   border-radius: 0px 0px 36px 0px;
   opacity: 1;
   /* background: transparent url('img/Screenshot (1521).png') 0% 0% no-repeat padding-box; */
   /* width: 50% !important;
   height: 400px; */
+}
+
+.myDiv{
+  display : inline-flex;
 }
 
 .locationHeader, .locationHeader, .longitudeHeader{
@@ -76,9 +80,4 @@ body {
 
 .locationLabel, .latLabel, .longLabel{
   color:white;
-}
-
-.map {
-  width: 100%;
-  height: 100%;
 }
